// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package thanos;

import "github.com/grafana/mimir/pkg/mimirpb/mimir.proto";
import "gogoproto/gogo.proto";

option go_package = "cache";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_sizecache_all) = false;
// Do not generate XXX fields to reduce memory footprint.
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

message CachedSeries {
  // cacheKey contains the non-hashed cache key, to detect hash collision.
  string cacheKey = 1;
  int64 start = 2;
  int64 end = 3;
  repeated cortexpb.Metric series = 4 [(gogoproto.nullable) = false];
  // results stores all marshaled intermediate results as a single byte blob.
  bytes results = 5;
}